tools/header.h

typedef double cpFloat;
typedef struct cpVect
{
    cpFloat x, y;
} cpVect;
typedef unsigned int cpTimestamp;
typedef void *cpDataPointer;
typedef struct cpArray cpArray;
typedef uintptr_t cpHashValue;
typedef unsigned char cpBool;
typedef struct cpTransform
{
    cpFloat a, b, c, d, tx, ty;
} cpTransform;
struct cpArray
{
    int num, max;
    void **arr;
};
// typedef struct cpSpatialIndexClass cpSpatialIndexClass;
// typedef struct cpSpatialIndex cpSpatialIndex;
// typedef struct cpCollisionID cpCollisionID;
// typedef struct cpSpatialIndexIteratorFunc cpSpatialIndexIteratorFunc;
// typedef struct cpSpatialIndexBBFunc cpSpatialIndexBBFunc;

// typedef struct cpBB{
// 	cpFloat l, b, r ,t;
// } cpBB;

// typedef cpBB (*cpSpatialIndexBBFunc)(void *obj);
// typedef cpCollisionID (*cpSpatialIndexQueryFunc)(void *obj1, void *obj2, cpCollisionID id, void *data);
// typedef cpFloat (*cpSpatialIndexSegmentQueryFunc)(void *obj1, void *obj2, void *data);
// typedef cpBool (*cpSpatialIndexContainsImpl)(cpSpatialIndex *index, void *obj, cpHashValue hashid);
// typedef struct cpContactBufferHeader cpContactBufferHeader;

// typedef void (*cpSpatialIndexDestroyImpl)(cpSpatialIndex *index);

// typedef int (*cpSpatialIndexCountImpl)(cpSpatialIndex *index);
// typedef void (*cpSpatialIndexEachImpl)(cpSpatialIndex *index, cpSpatialIndexIteratorFunc func, void *data);

// typedef cpBool (*cpSpatialIndexContainsImpl)(cpSpatialIndex *index, void *obj, cpHashValue hashid);
// typedef void (*cpSpatialIndexInsertImpl)(cpSpatialIndex *index, void *obj, cpHashValue hashid);
// typedef void (*cpSpatialIndexRemoveImpl)(cpSpatialIndex *index, void *obj, cpHashValue hashid);

// typedef void (*cpSpatialIndexReindexImpl)(cpSpatialIndex *index);
// typedef void (*cpSpatialIndexReindexObjectImpl)(cpSpatialIndex *index, void *obj, cpHashValue hashid);
// typedef void (*cpSpatialIndexReindexQueryImpl)(cpSpatialIndex *index, cpSpatialIndexQueryFunc func, void *data);

// typedef void (*cpSpatialIndexQueryImpl)(cpSpatialIndex *index, void *obj, cpBB bb, cpSpatialIndexQueryFunc func, void *data);
// typedef void (*cpSpatialIndexSegmentQueryImpl)(cpSpatialIndex *index, void *obj, cpVect a, cpVect b, cpFloat t_exit, cpSpatialIndexSegmentQueryFunc func, void *data);
typedef struct cpSpatialIndex cpSpatialIndex;
struct cpSpatialIndex
{
    cpSpatialIndexClass *klass;

    cpSpatialIndexBBFunc bbfunc;

    cpSpatialIndex *staticIndex, *dynamicIndex;
};
typedef struct cpContactBufferHeader cpContactBufferHeader;
typedef struct cpHashSet cpHashSet;
typedef struct cpCollisionHandler cpCollisionHandler;
typedef struct cpSpace cpSpace;
typedef struct cpArbiter cpArbiter;
typedef struct cpShape cpShape;
typedef struct cpConstraint cpConstraint;
typedef struct cpBody cpBody;
typedef struct cpConstraintClass {
	cpConstraintPreStepImpl preStep;
	cpConstraintApplyCachedImpulseImpl applyCachedImpulse;
	cpConstraintApplyImpulseImpl applyImpulse;
	cpConstraintGetImpulseImpl getImpulse;
} cpConstraintClass;
/// Callback function type that gets called before solving a joint.
// typedef void (*cpConstraintPreSolveFunc)(cpConstraint *constraint, cpSpace *space);
typedef void (*cpConstraintPreSolveFuncD)(cpConstraint *constraint, cpSpace *space, uint64_t callbackId);
/// Callback function type that gets called after solving a joint.
//typedef void (*cpConstraintPostSolveFunc)(cpConstraint *constraint, cpSpace *space);
typedef void (*cpConstraintPostSolveFuncD)(cpConstraint *constraint, cpSpace *space, uint64_t callbackId);
struct cpConstraint {
	const cpConstraintClass *klass;
	
	cpSpace *space;
	
	cpBody *a, *b;
	cpConstraint *next_a, *next_b;
	
	cpFloat maxForce;
	cpFloat errorBias;
	cpFloat maxBias;
	
	cpBool collideBodies;
	
	cpConstraintPreSolveFuncD preSolve;
	cpConstraintPostSolveFuncD postSolve;
	
	cpDataPointer userData;
};
/// Rigid body velocity update function type.
//typedef void (*cpBodyVelocityFunc)(cpBody *body, cpVect gravity, cpFloat damping, cpFloat dt);
typedef void (*cpBodyVelocityFuncD)(cpBody *body, cpVect gravity, cpFloat damping, cpFloat dt, uint64_t callbackId);
/// Rigid body position update function type.
// typedef void (*cpBodyPositionFunc)(cpBody *body, cpFloat dt);
typedef void (*cpBodyPositionFuncD)(cpBody *body, cpFloat dt, uint64_t callbackId);
struct cpBody {
	// Integration functions
	cpBodyVelocityFuncD velocity_func;
	cpBodyPositionFuncD position_func;
	
	// mass and it's inverse
	cpFloat m;
	cpFloat m_inv;
	
	// moment of inertia and it's inverse
	cpFloat i;
	cpFloat i_inv;
	
	// center of gravity
	cpVect cog;
	
	// position, velocity, force
	cpVect p;
	cpVect v;
	cpVect f;
	
	// Angle, angular velocity, torque (radians)
	cpFloat a;
	cpFloat w;
	cpFloat t;
	
	cpTransform transform;
	
	cpDataPointer userData;
	
	// "pseudo-velocities" used for eliminating overlap.
	// Erin Catto has some papers that talk about what these are.
	cpVect v_bias;
	cpFloat w_bias;
	
	cpSpace *space;
	
	cpShape *shapeList;
	cpArbiter *arbiterList;
	cpConstraint *constraintList;
	
	struct {
		cpBody *root;
		cpBody *next;
		cpFloat idleTime;
	} sleeping;
};
struct cpShape
{
    const cpShapeClass *klass;

    cpSpace *space;
    cpBody *body;
    struct cpShapeMassInfo massInfo;
    cpBB bb;

    cpBool sensor;

    cpFloat e;
    cpFloat u;
    cpVect surfaceV;

    cpDataPointer userData;

    cpCollisionType type;
    cpShapeFilter filter;

    cpShape *next;
    cpShape *prev;

    cpHashValue hashid;
};
struct cpArbiter
{
    cpFloat e;
    cpFloat u;
    cpVect surface_vr;

    cpDataPointer data;

    const cpShape *a, *b;
    cpBody *body_a, *body_b;
    struct cpArbiterThread thread_a, thread_b;

    int count;
    struct cpContact *contacts;
    cpVect n;

    // Regular, wildcard A and wildcard B collision handlers.
    cpCollisionHandler *handler, *handlerA, *handlerB;
    cpBool swapped;

    cpTimestamp stamp;
    enum cpArbiterState state;
};
struct cpCollisionHandler {
	const cpCollisionType typeA;
	const cpCollisionType typeB;
	cpCollisionBeginFuncD beginFunc;
	cpCollisionPreSolveFuncD preSolveFunc;
	cpCollisionPostSolveFuncD postSolveFunc;
	cpCollisionSeparateFuncD separateFunc;
	cpDataPointer userData;
	uint64_t callbackId;
};
struct cpSpace
{
    int iterations;

    cpVect gravity;
    cpFloat damping;

    cpFloat idleSpeedThreshold;
    cpFloat sleepTimeThreshold;

    cpFloat collisionSlop;
    cpFloat collisionBias;
    cpTimestamp collisionPersistence;

    cpDataPointer userData;

    cpTimestamp stamp;
    cpFloat curr_dt;

    cpArray *dynamicBodies;
    cpArray *staticBodies;
    cpArray *rousedBodies;
    cpArray *sleepingComponents;

    cpHashValue shapeIDCounter;
    cpSpatialIndex *staticShapes;
    cpSpatialIndex *dynamicShapes;

    cpArray *constraints;

    cpArray *arbiters;
    cpContactBufferHeader *contactBuffersHead;
    cpHashSet *cachedArbiters;
    cpArray *pooledArbiters;

    cpArray *allocatedBuffers;
    unsigned int locked;

    cpBool usesWildcards;
    cpHashSet *collisionHandlers;
    cpCollisionHandler defaultHandler;

    cpBool skipPostStep;
    cpArray *postStepCallbacks;

    cpBody *staticBody;
    cpBody _staticBody;
};
// typedef cpFloat (*cpDampedRotarySpringTorqueFunc)(struct cpConstraint *spring, cpFloat relativeAngle);
typedef cpFloat (*cpDampedRotarySpringTorqueFuncD)(struct cpConstraint *spring, cpFloat relativeAngle, uint64_t callbackId);
 cpConstraint* cpDampedRotarySpringNew(cpBody *a, cpBody *b, cpFloat restAngle, cpFloat stiffness, cpFloat damping);
 cpFloat cpDampedRotarySpringGetRestAngle(const cpConstraint *constraint);
 void cpDampedRotarySpringSetRestAngle(cpConstraint *constraint, cpFloat restAngle);
 cpFloat cpDampedRotarySpringGetStiffness(const cpConstraint *constraint);
 void cpDampedRotarySpringSetStiffness(cpConstraint *constraint, cpFloat stiffness);
 cpFloat cpDampedRotarySpringGetDamping(const cpConstraint *constraint);
 void cpDampedRotarySpringSetDamping(cpConstraint *constraint, cpFloat damping);
 cpDampedRotarySpringTorqueFuncD cpDampedRotarySpringGetSpringTorqueFunc(const cpConstraint *constraint);
 void cpDampedRotarySpringSetSpringTorqueFunc(cpConstraint *constraint, cpDampedRotarySpringTorqueFuncD springTorqueFunc, uint64_t callbackId);
 void cpConstraintDestroy(cpConstraint *constraint);
 void cpConstraintFree(cpConstraint *constraint);
 cpSpace* cpConstraintGetSpace(const cpConstraint *constraint);
 cpBody* cpConstraintGetBodyA(const cpConstraint *constraint);
 cpBody* cpConstraintGetBodyB(const cpConstraint *constraint);
 cpFloat cpConstraintGetMaxForce(const cpConstraint *constraint);
 void cpConstraintSetMaxForce(cpConstraint *constraint, cpFloat maxForce);
 cpFloat cpConstraintGetErrorBias(const cpConstraint *constraint);
 void cpConstraintSetErrorBias(cpConstraint *constraint, cpFloat errorBias);
 cpFloat cpConstraintGetMaxBias(const cpConstraint *constraint);
 void cpConstraintSetMaxBias(cpConstraint *constraint, cpFloat maxBias);
 cpBool cpConstraintGetCollideBodies(const cpConstraint *constraint);
 void cpConstraintSetCollideBodies(cpConstraint *constraint, cpBool collideBodies);
 cpConstraintPreSolveFuncD cpConstraintGetPreSolveFunc(const cpConstraint *constraint);
 void cpConstraintSetPreSolveFunc(cpConstraint *constraint, cpConstraintPreSolveFuncD preSolveFunc);
 cpConstraintPostSolveFuncD cpConstraintGetPostSolveFunc(const cpConstraint *constraint);