lib/src/bindings.dart


  late final _cpDampedRotarySpringNewPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<cpConstraint> Function(ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, cpFloat, cpFloat, cpFloat)>>('cpDampedRotarySpringNew');
  late final _cpDampedRotarySpringNew = _cpDampedRotarySpringNewPtr.asFunction<ffi.Pointer<cpConstraint> Function(ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, double, double, double)>();

  double cpDampedRotarySpringGetRestAngle(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpDampedRotarySpringGetRestAngle(
      constraint,
    );
  }

  late final _cpDampedRotarySpringGetRestAnglePtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpConstraint>)>>('cpDampedRotarySpringGetRestAngle');
  late final _cpDampedRotarySpringGetRestAngle = _cpDampedRotarySpringGetRestAnglePtr.asFunction<double Function(ffi.Pointer<cpConstraint>)>();

  void cpDampedRotarySpringSetRestAngle(
    ffi.Pointer<cpConstraint> constraint,
    double restAngle,
  ) {
    return _cpDampedRotarySpringSetRestAngle(
      constraint,
      restAngle,
    );
  }

  late final _cpDampedRotarySpringSetRestAnglePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpFloat)>>('cpDampedRotarySpringSetRestAngle');
  late final _cpDampedRotarySpringSetRestAngle = _cpDampedRotarySpringSetRestAnglePtr.asFunction<void Function(ffi.Pointer<cpConstraint>, double)>();

  double cpDampedRotarySpringGetStiffness(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpDampedRotarySpringGetStiffness(
      constraint,
    );
  }

  late final _cpDampedRotarySpringGetStiffnessPtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpConstraint>)>>('cpDampedRotarySpringGetStiffness');
  late final _cpDampedRotarySpringGetStiffness = _cpDampedRotarySpringGetStiffnessPtr.asFunction<double Function(ffi.Pointer<cpConstraint>)>();

  void cpDampedRotarySpringSetStiffness(
    ffi.Pointer<cpConstraint> constraint,
    double stiffness,
  ) {
    return _cpDampedRotarySpringSetStiffness(
      constraint,
      stiffness,
    );
  }

  late final _cpDampedRotarySpringSetStiffnessPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpFloat)>>('cpDampedRotarySpringSetStiffness');
  late final _cpDampedRotarySpringSetStiffness = _cpDampedRotarySpringSetStiffnessPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, double)>();

  double cpDampedRotarySpringGetDamping(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpDampedRotarySpringGetDamping(
      constraint,
    );
  }

  late final _cpDampedRotarySpringGetDampingPtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpConstraint>)>>('cpDampedRotarySpringGetDamping');
  late final _cpDampedRotarySpringGetDamping = _cpDampedRotarySpringGetDampingPtr.asFunction<double Function(ffi.Pointer<cpConstraint>)>();

  void cpDampedRotarySpringSetDamping(
    ffi.Pointer<cpConstraint> constraint,
    double damping,
  ) {
    return _cpDampedRotarySpringSetDamping(
      constraint,
      damping,
    );
  }

  late final _cpDampedRotarySpringSetDampingPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpFloat)>>('cpDampedRotarySpringSetDamping');
  late final _cpDampedRotarySpringSetDamping = _cpDampedRotarySpringSetDampingPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, double)>();

  cpDampedRotarySpringTorqueFuncD cpDampedRotarySpringGetSpringTorqueFunc(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpDampedRotarySpringGetSpringTorqueFunc(
      constraint,
    );
  }

  late final _cpDampedRotarySpringGetSpringTorqueFuncPtr = _lookup<ffi.NativeFunction<cpDampedRotarySpringTorqueFuncD Function(ffi.Pointer<cpConstraint>)>>('cpDampedRotarySpringGetSpringTorqueFunc');
  late final _cpDampedRotarySpringGetSpringTorqueFunc = _cpDampedRotarySpringGetSpringTorqueFuncPtr.asFunction<cpDampedRotarySpringTorqueFuncD Function(ffi.Pointer<cpConstraint>)>();

  void cpDampedRotarySpringSetSpringTorqueFunc(
    ffi.Pointer<cpConstraint> constraint,
    cpDampedRotarySpringTorqueFuncD springTorqueFunc,
    int callbackId,
  ) {
    return _cpDampedRotarySpringSetSpringTorqueFunc(
      constraint,
      springTorqueFunc,
      callbackId,
    );
  }

  late final _cpDampedRotarySpringSetSpringTorqueFuncPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpDampedRotarySpringTorqueFuncD, ffi.Uint64)>>('cpDampedRotarySpringSetSpringTorqueFunc');
  late final _cpDampedRotarySpringSetSpringTorqueFunc = _cpDampedRotarySpringSetSpringTorqueFuncPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, cpDampedRotarySpringTorqueFuncD, int)>();

  void cpConstraintDestroy(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpConstraintDestroy(
      constraint,
    );
  }

  late final _cpConstraintDestroyPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>)>>('cpConstraintDestroy');
  late final _cpConstraintDestroy = _cpConstraintDestroyPtr.asFunction<void Function(ffi.Pointer<cpConstraint>)>();

  void cpConstraintFree(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpConstraintFree(
      constraint,
    );
  }

  late final _cpConstraintFreePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>)>>('cpConstraintFree');
  late final _cpConstraintFree = _cpConstraintFreePtr.asFunction<void Function(ffi.Pointer<cpConstraint>)>();

  ffi.Pointer<cpSpace> cpConstraintGetSpace(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpConstraintGetSpace(
      constraint,
    );
  }

  late final _cpConstraintGetSpacePtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpSpace> Function(ffi.Pointer<cpConstraint>)>>('cpConstraintGetSpace');
  late final _cpConstraintGetSpace = _cpConstraintGetSpacePtr.asFunction<ffi.Pointer<cpSpace> Function(ffi.Pointer<cpConstraint>)>();

  ffi.Pointer<cpBody> cpConstraintGetBodyA(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpConstraintGetBodyA(
      constraint,
    );
  }

  late final _cpConstraintGetBodyAPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpBody> Function(ffi.Pointer<cpConstraint>)>>('cpConstraintGetBodyA');
  late final _cpConstraintGetBodyA = _cpConstraintGetBodyAPtr.asFunction<ffi.Pointer<cpBody> Function(ffi.Pointer<cpConstraint>)>();

  ffi.Pointer<cpBody> cpConstraintGetBodyB(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpConstraintGetBodyB(
      constraint,
    );
  }

  late final _cpConstraintGetBodyBPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpBody> Function(ffi.Pointer<cpConstraint>)>>('cpConstraintGetBodyB');
  late final _cpConstraintGetBodyB = _cpConstraintGetBodyBPtr.asFunction<ffi.Pointer<cpBody> Function(ffi.Pointer<cpConstraint>)>();

  double cpConstraintGetMaxForce(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpConstraintGetMaxForce(
      constraint,
    );
  }

  late final _cpConstraintGetMaxForcePtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpConstraint>)>>('cpConstraintGetMaxForce');
  late final _cpConstraintGetMaxForce = _cpConstraintGetMaxForcePtr.asFunction<double Function(ffi.Pointer<cpConstraint>)>();

  void cpConstraintSetMaxForce(
    ffi.Pointer<cpConstraint> constraint,
    double maxForce,
  ) {
    return _cpConstraintSetMaxForce(
      constraint,
      maxForce,
    );
  }

  late final _cpConstraintSetMaxForcePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpFloat)>>('cpConstraintSetMaxForce');
  late final _cpConstraintSetMaxForce = _cpConstraintSetMaxForcePtr.asFunction<void Function(ffi.Pointer<cpConstraint>, double)>();

  double cpConstraintGetErrorBias(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpConstraintGetErrorBias(
      constraint,
    );
  }

  late final _cpConstraintGetErrorBiasPtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpConstraint>)>>('cpConstraintGetErrorBias');
  late final _cpConstraintGetErrorBias = _cpConstraintGetErrorBiasPtr.asFunction<double Function(ffi.Pointer<cpConstraint>)>();

  void cpConstraintSetErrorBias(
    ffi.Pointer<cpConstraint> constraint,
    double errorBias,
  ) {
    return _cpConstraintSetErrorBias(
      constraint,
      errorBias,
    );
  }

  late final _cpConstraintSetErrorBiasPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpFloat)>>('cpConstraintSetErrorBias');
  late final _cpConstraintSetErrorBias = _cpConstraintSetErrorBiasPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, double)>();

  double cpConstraintGetMaxBias(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpConstraintGetMaxBias(
      constraint,
    );
  }

  late final _cpConstraintGetMaxBiasPtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpConstraint>)>>('cpConstraintGetMaxBias');
  late final _cpConstraintGetMaxBias = _cpConstraintGetMaxBiasPtr.asFunction<double Function(ffi.Pointer<cpConstraint>)>();

  void cpConstraintSetMaxBias(
    ffi.Pointer<cpConstraint> constraint,
    double maxBias,
  ) {
    return _cpConstraintSetMaxBias(
      constraint,
      maxBias,
    );
  }

  late final _cpConstraintSetMaxBiasPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpFloat)>>('cpConstraintSetMaxBias');
  late final _cpConstraintSetMaxBias = _cpConstraintSetMaxBiasPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, double)>();

  int cpConstraintGetCollideBodies(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpConstraintGetCollideBodies(
      constraint,
    );
  }

  late final _cpConstraintGetCollideBodiesPtr = _lookup<ffi.NativeFunction<cpBool Function(ffi.Pointer<cpConstraint>)>>('cpConstraintGetCollideBodies');
  late final _cpConstraintGetCollideBodies = _cpConstraintGetCollideBodiesPtr.asFunction<int Function(ffi.Pointer<cpConstraint>)>();

  void cpConstraintSetCollideBodies(
    ffi.Pointer<cpConstraint> constraint,
    int collideBodies,
  ) {
    return _cpConstraintSetCollideBodies(
      constraint,
      collideBodies,
    );
  }

  late final _cpConstraintSetCollideBodiesPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpBool)>>('cpConstraintSetCollideBodies');
  late final _cpConstraintSetCollideBodies = _cpConstraintSetCollideBodiesPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, int)>();

  cpConstraintPreSolveFuncD cpConstraintGetPreSolveFunc(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpConstraintGetPreSolveFunc(
      constraint,
    );
  }

  late final _cpConstraintGetPreSolveFuncPtr = _lookup<ffi.NativeFunction<cpConstraintPreSolveFuncD Function(ffi.Pointer<cpConstraint>)>>('cpConstraintGetPreSolveFunc');
  late final _cpConstraintGetPreSolveFunc = _cpConstraintGetPreSolveFuncPtr.asFunction<cpConstraintPreSolveFuncD Function(ffi.Pointer<cpConstraint>)>();

  void cpConstraintSetPreSolveFunc(
    ffi.Pointer<cpConstraint> constraint,
    cpConstraintPreSolveFuncD preSolveFunc,
  ) {
    return _cpConstraintSetPreSolveFunc(
      constraint,
      preSolveFunc,
    );
  }

  late final _cpConstraintSetPreSolveFuncPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpConstraintPreSolveFuncD)>>('cpConstraintSetPreSolveFunc');
  late final _cpConstraintSetPreSolveFunc = _cpConstraintSetPreSolveFuncPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, cpConstraintPreSolveFuncD)>();
  cpConstraintPostSolveFuncD cpConstraintGetPostSolveFunc(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpConstraintGetPostSolveFunc(
      constraint,
    );
  }

  late final _cpConstraintGetPostSolveFuncPtr = _lookup<ffi.NativeFunction<cpConstraintPostSolveFuncD Function(ffi.Pointer<cpConstraint>)>>('cpConstraintGetPostSolveFunc');
  late final _cpConstraintGetPostSolveFunc = _cpConstraintGetPostSolveFuncPtr.asFunction<cpConstraintPostSolveFuncD Function(ffi.Pointer<cpConstraint>)>();
